# ChatBot_With_Tools

./: .gitignore  README.md  README.txt  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
AINews/: daily_summary.md  monthly_summary.md  weekly_summary.md
BlogGeneration/: AI_Agent_vs_Agentic_AI_blog.md  Gemini_get_depression_recently_blog.md
src/langgraph_agenticai/: main.py
src/langgraph_agenticai/LLMs/: groqllm.py
src/langgraph_agenticai/graph/: graph_builder.py
src/langgraph_agenticai/nodes/: ai_news_node.py  basic_chat_node.py  blog_generator_node.py  chatbot_with_tools_node.py
src/langgraph_agenticai/state/: state.py
src/langgraph_agenticai/tools/: search_tool.py
src/langgraph_agenticai/ui/: uiconfigfile.ini  uiconfigfile.py
src/langgraph_agenticai/ui/streamlit_ui/: display_result.py  load_ui.py
