[project]
name = "chatbot-with-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-cli[inmem]>=0.0.36",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "streamlit>=1.48.1",
    "tavily-python>=0.7.10",
    "uv>=0.8.11",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
    "wikipedia>=1.4.0",
]
